# brimfile

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml  matlab_toolbox.yml  publish_to_pypi.yml  test.yml  venv_creation.yml
MATLAB/brimfile/resources/project/root/: Mhm62D9X4gBe_pr4So2xYre5YOwd.xml
MATLAB/brimfile_wrapper/: toolbox.ignore
MATLAB/brimfile_wrapper/+brimfile/: init.m
MATLAB/tests/: reading.m
docs/: brimfile.html  index.html  search.js
docs/brimfile/: constants.html  data.html  file.html  file_abstraction.html  metadata.html  units.html  utils.html
examples/: general.py
imagej-plugin/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  QUICKSTART.md  README.md  USAGE.md  build.bat  build.sh  pom.xml
imagej-plugin/src/main/resources/: plugins.config
src/brimfile/: __init__.py  analysis_results.py  constants.py  data.py  file.py  file_abstraction.py  fitting_models.py  metadata.py  physics.py  units.py  utils.py
src/brimfile/converter/: brim_converter.py
src/brimfile/metadata/: __init__.py  main.py  metadata_class.py  metadata_schema.py  metadata_validation.py  schema.py  types.py  validation.py
src/brimfile/validation/: __init__.py  json_descriptor.py  main.py  utils.py
src/js/: zarr_file.js  zarr_wrapper.js
tests/: README.md  conftest.py  general.py  test_analysis_results.py  test_data.py  test_file.py  test_fitting_models.py  test_general.py  test_integration.py  test_metadata.py  test_metadata_validation.py  test_utils.py  test_validation_main.py
(+17 files in other folders)
