[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs >= 0.4"]
build-backend = "hatchling.build"
[tool.hatch.version]
source = "vcs"
[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
[tool.hatch.build.hooks.vcs]
version-file = "src/brimfile/_version.py"

[project]
name = "brimfile"
dynamic = ["version"]
requires-python = ">=3.11"
authors = [
    {name = "Carlo Bevilacqua", email = "carlo.bevilacqua@embl.de"},
    {name = "Sebastian Hambura", email = "sebastian.hambura@embl.de"},
]
description = "A package to read and write to the brim file format, containing spectral data and metadata from Brillouin microscopy"
readme = "README.md"
license = "LGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"Intended Audience :: Developers",
	"Topic :: File Formats",
	"Topic :: Scientific/Engineering",
  "Programming Language :: Python :: 3"
	
]
keywords = ["Brillouin microscopy"]
dependencies = [
  "numpy",
  "zarr >= 3.1.1"
]

[project.optional-dependencies]
remote-store = ["zarr[remote]>=3.1.1", "s3fs"]
export-tiff = ["tifffile"]
converter = ["h5py"]

[project.urls]
Documentation = "https://brillouin-imaging.github.io/brimfile/"
Repository = "https://github.com/brillouin-imaging/brimfile"
Issues = "https://github.com/brillouin-imaging/brimfile/issues"
